--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 
 <head>
    <meta charset="UTF-8">
@@ -26,8 +26,9 @@
 
 </head>
 
-<body class="body">
-   <section class="section" id="section__header">
+<section class="section" id="section__header">
+
+   <body class="body">
       <header class="header js-header">
          <img class="header__logo js-header__logo" src="img/logo.jpeg" alt="Logo">
          <div class="block block__titleSite">
@@ -40,122 +41,121 @@
          <section class="section" id="section_navigationSide">
             <nav class="navigation">
                <ul class="navigation__navigationSite">
-                  <li><a class="navigationLink" href="#section__header"><strong>Góra&nbsp;strony</strong></a>
+                  <li><a class="navigation__link" href="#section__header"><strong>Góra&nbsp;strony</strong></a>
                   </li>
-                  <li><a class="navigationLink" href="#section__main"><strong>Część&nbsp;główna</strong></a></li>
-                  <li><a class="navigationLink" href="#section__tableBonsai"><strong>Drzewa&nbsp;bonsai</strong></a>
+                  <li><a class="navigation__link" href="#section__main"><strong>Część&nbsp;główna</strong></a></li>
+                  <li><a class="navigation__link" href="#section__tableBonsai"><strong>Drzewa&nbsp;bonsai</strong></a>
                   </li>
-                  <li><a class="navigationLink" href="#section__authorDescription"><strong>Autor</strong></a></li>
-                  <li><a class="navigationLink" href="#section__footer"><strong>Dół&nbsp;Strony</strong></a></li>
+                  <li><a class="navigation__link" href="#section__authorDescription"><strong>Autor</strong></a></li>
+                  <li><a class="navigation__link" href="#section__footer"><strong>Dół&nbsp;Strony</strong></a></li>
                </ul>
             </nav>
          </section>
-   </section>
-   </header>
+      </header>
+</section>
+<section class="section" id="section__main">
    <main class="main">
-      <section class="section" id="section__main">
-         <div class="main__block">
-            <section class="section" id="section__authorDescription">
-               <h3 class="section__partDescription">O autorze strony </h3>
-               <p>&nbsp;&nbsp;&nbsp;Ja jestem autorem tej strony. Nazywam sie <strong>Łukasz Duszak</strong>. Od
-                  połowy 2022 roku
-                  moją
-                  pasją jest utworzenie <strong>drzewka bonsai</strong>, które wywodzą się z Chin i Japonii.
-                  Jestem po
-                  studiach informatycznyk. Chcę też nauczyć się dobrze <b>języka Angielskiego</b>.</p>
-            </section>
-            <section class="section" id="section__tableBonsai">
-               <h3 class="section__partDescription">Uprawiane przeze mnie rośliny na drzewka Bonsaii</h3>
-               <div class="main__containerTableBonsai">
-                  <table class="main__tableBonsai">
-                     <caption class="main__tableBonsai--caption"><b>Drzewka bonsai</b></caption>
-                     <tr>
-                        <th scope="col" class="main__tableBonsai--element main__tableBonsai--headColumn">Nazwa
-                        </th>
-                        <th scope="col" class="main__tableBonsai--element main__tableBonsai--headColumn">Kraj
-                           pochodzenia</th>
-                        <th scope="col" class="main__tableBonsai--element main__tableBonsai--headColumn">Proces
-                           stratyfikacji</th>
-                        <th scope="col" class="main__tableBonsai--element main__tableBonsai--headColumn">Proces
-                           skaryfikacji</th>
-                        <th scope="col" class="main__tableBonsai--element main__tableBonsai--headColumn">
-                           Zimowanie
-                        </th>
-                        <th scope="col" class="main__tableBonsai--element main__tableBonsai--headColumn">Data
-                           kiełkowania</th>
-                     </tr>
-                     <tr>
-                        <th scope="row" class="main__tableBonsai--element main__tableBonsai--headRow">Delonix
-                           Regia
-                        </th>
-                        <td class="main__tableBonsai--element"> Madagaskar</td>
-                        <td class="main__tableBonsai--element">Nie</td>
-                        <td class="main__tableBonsai--element">Tak</td>
-                        <td class="main__tableBonsai--element">w trakcie</td>
-                        <td class="main__tableBonsai--element"> ---</td>
-                     </tr>
-                     <tr>
-                        <th scope="row" class="main__tableBonsai--element main__tableBonsai--headRow">Flavida
-                        </th>
-                        <td class="main__tableBonsai--element"> Madagaskar</td>
-                        <td class="main__tableBonsai--element">Nie</td>
-                        <td class="main__tableBonsai--element">Tak</td>
-                        <td class="main__tableBonsai--element"></td>
-                        <td class="main__tableBonsai--element"> 05.12.24r.</td>
-                     </tr>
-                     <tr>
-                        <th scope="row" class="main__tableBonsai--element main__tableBonsai--headRow">
-                           Tulipanowiec
-                           Amerykański</th>
-                        <td class="main__tableBonsai--element"> Ameryka Południowa</td>
-                        <td class="main__tableBonsai--element">Tak</td>
-                        <td class="main__tableBonsai--element">Nie</td>
-                        <td class="main__tableBonsai--element"></td>
-                        <td class="main__tableBonsai--element"> ---</td>
-                     </tr>
-                     <tr>
-                        <th scope="row" class="main__tableBonsai--element main__tableBonsai--headRow">Klon
-                           (Atropurpureum)</th>
-                        <td class="main__tableBonsai--element"> Polska</td>
-                        <td class="main__tableBonsai--element">Tak</td>
-                        <td class="main__tableBonsai--element">Nie</td>
-                        <td class="main__tableBonsai--element"></td>
-                        <td class="main__tableBonsai--element"> ---</td>
-                     </tr>
-                     <tr>
-                        <th scope="row" class="main__tableBonsai--element main__tableBonsai--headRow">Paulownia
-                           Cesarska</th>
-                        <td class="main__tableBonsai--element"> Afryka</td>
-                        <td class="main__tableBonsai--element">Nie</td>
-                        <td class="main__tableBonsai--element">Nie</td>
-                        <td class="main__tableBonsai--element">w trakcie</td>
-                        <td class="main__tableBonsai--element"> ---</td>
-                     </tr>
-                  </table>
-               </div>
-            </section>
+      <div class="main__block">
+         <section class="section" id="section__authorDescription">
+            <h3 class="section__partDescription">O autorze strony </h3>
+            <p>&nbsp;&nbsp;&nbsp;Ja jestem autorem tej strony. Nazywam sie <strong>Łukasz Duszak</strong>. Od
+               połowy 2022 roku
+               moją
+               pasją jest utworzenie <strong>drzewka bonsai</strong>, które wywodzą się z Chin i Japonii.
+               Jestem po
+               studiach informatycznyk. Chcę też nauczyć się dobrze <b>języka Angielskiego</b>.</p>
+         </section>
+         <section class="section" id="section__tableBonsai">
+            <h3 class="section__partDescription">Uprawiane przeze mnie rośliny na drzewka Bonsaii</h3>
+            <div class="main__containerTableBonsai">
+               <table class="main__tableBonsai">
+                  <caption class="tableBonsai__caption"><b>Drzewka bonsai</b></caption>
+                  <tr>
+                     <th scope="col" class="tableBonsai__element tableBonsai__headColumn">Nazwa
+                     </th>
+                     <th scope="col" class="tableBonsai__element tableBonsai__headColumn">Kraj
+                        pochodzenia</th>
+                     <th scope="col" class="tableBonsai__element tableBonsai__headColumn">Proces
+                        stratyfikacji</th>
+                     <th scope="col" class="tableBonsai__element tableBonsai__headColumn">Proces
+                        skaryfikacji</th>
+                     <th scope="col" class="tableBonsai__element tableBonsai__headColumn">
+                        Zimowanie
+                     </th>
+                     <th scope="col" class="tableBonsai__element tableBonsai__headColumn">Data
+                        kiełkowania</th>
+                  </tr>
+                  <tr>
+                     <th scope="row" class="tableBonsai__element tableBonsai__headRow">Delonix
+                        Regia
+                     </th>
+                     <td class="tableBonsai__element"> Madagaskar</td>
+                     <td class="tableBonsai__element">Nie</td>
+                     <td class="tableBonsai__element">Tak</td>
+                     <td class="tableBonsai__element">w trakcie</td>
+                     <td class="tableBonsai__element"> ---</td>
+                  </tr>
+                  <tr>
+                     <th scope="row" class="tableBonsai__element tableBonsai__headRow">Flavida
+                     </th>
+                     <td class="tableBonsai__element"> Madagaskar</td>
+                     <td class="tableBonsai__element">Nie</td>
+                     <td class="tableBonsai__element">Tak</td>
+                     <td class="tableBonsai__element"></td>
+                     <td class="tableBonsai__element"> 05.12.24r.</td>
+                  </tr>
+                  <tr>
+                     <th scope="row" class="tableBonsai__element tableBonsai__headRow">
+                        Tulipanowiec
+                        Amerykański</th>
+                     <td class="tableBonsai__element"> Ameryka Południowa</td>
+                     <td class="tableBonsai__element">Tak</td>
+                     <td class="tableBonsai__element">Nie</td>
+                     <td class="tableBonsai__element"></td>
+                     <td class="tableBonsai__element"> ---</td>
+                  </tr>
+                  <tr>
+                     <th scope="row" class="tableBonsai__element tableBonsai__headRow">Klon
+                        (Atropurpureum)</th>
+                     <td class="tableBonsai__element"> Polska</td>
+                     <td class="tableBonsai__element">Tak</td>
+                     <td class="tableBonsai__element">Nie</td>
+                     <td class="tableBonsai__element"></td>
+                     <td class="tableBonsai__element"> ---</td>
+                  </tr>
+                  <tr>
+                     <th scope="row" class="tableBonsai__element tableBonsai__headRow">Paulownia
+                        Cesarska</th>
+                     <td class="tableBonsai__element"> Afryka</td>
+                     <td class="tableBonsai__element">Nie</td>
+                     <td class="tableBonsai__element">Nie</td>
+                     <td class="tableBonsai__element">w trakcie</td>
+                     <td class="tableBonsai__element"> ---</td>
+                  </tr>
+               </table>
+            </div>
+         </section>
 
 
-         </div>
-      </section>
+      </div>
    </main>
+</section>
+<section class="section section__footer" id="section__footer">
    <footer class="footer">
-      <section class="section section__footer" id="section__footer">
-         <contact class="footer__contact">
-            <h3 class="footer__headerContact"> Kontakt</h3>
-            <p><b>Imię i nazwisko:</b> Łukasz Duszak</p>
-            <p><b>Adres:</b> XXXXXXXXXX</p>
-            <p><b>Numer telefonu:</b>
-               <a class="footer__contact--phoneAuthorSite" href="tel:+48.500 (100) 200">500 100 200</a>
-            </p>
-            <p>Adres e-mail:
-               <a class="footer__contact--mailAuthorSite"
-                  href="mailto:lukashardware@gmail.com">lukashardware@gmail.com</a>
-            </p>
-         </contact>
-         <p class="footer__symbolCopyright"> Copyright &copy;</p>
-      </section>
+      <contact class="footer__contact">
+         <h3 class="footer__headerContact"> Kontakt</h3>
+         <p><b>Imię i nazwisko:</b> Łukasz Duszak</p>
+         <p><b>Adres:</b> XXXXXXXXXX</p>
+         <p><b>Numer telefonu:</b>
+            <a class="footer__contact--phoneAuthorSite" href="tel:+48.500 (100) 200">500 100 200</a>
+         </p>
+         <p>Adres e-mail:
+            <a class="footer__contact--mailAuthorSite" href="mailto:lukashardware@gmail.com">lukashardware@gmail.com</a>
+         </p>
+      </contact>
+      <p class="footer__symbolCopyright"> Copyright &copy;</p>
    </footer>
+</section>
 </body>
 
 </html>
