Edited name classes

--- a/index.html
+++ b/index.html
@@ -147,10 +147,10 @@
          <p><b>Imię i nazwisko:</b> Łukasz Duszak</p>
          <p><b>Adres:</b> XXXXXXXXXX</p>
          <p><b>Numer telefonu:</b>
-            <a class="footer__contact--phoneAuthorSite" href="tel:+48.500 (100) 200">500 100 200</a>
+            <a class="contact__linkPhone" href="tel:+48.500 (100) 200">500 100 200</a>
          </p>
          <p>Adres e-mail:
-            <a class="footer__contact--mailAuthorSite" href="mailto:lukashardware@gmail.com">lukashardware@gmail.com</a>
+            <a class="contact__linkMailAuthorSite" href="mailto:lukashardware@gmail.com">lukashardware@gmail.com</a>
          </p>
       </contact>
       <p class="footer__symbolCopyright"> Copyright &copy;</p>
